# guix-channel

./: .gitignore  .guix-authorizations  .guix-channel  AGENTS.md  AUTHORS  DOLT_REMOTE.md  GUIX_INSTALLATION.md  MY-ISSUES  Makefile.am  NEWS  README  README.md  README.org  configure.ac  guix.scm  m7e0tvk7sartfuvolddqdtejpkgjbkaq  manifest  pre-inst-env.in  run-vm.sh
.beads/: .gitignore  beads.base.meta.json  beads.db  beads.left.jsonl  beads.left.meta.json  config.yaml  deletions.jsonl  issues.jsonl  last-touched  metadata.json
.github/workflows/: test.yml
examples/: README.md  VM-TESTING-GUIDE.md  cortex-agent-system-config.scm  cortex-xdr-vm-config.scm
history/: CORTEX-XDR-TEST-REPORT.md
r0man/guix/services/: cortex.scm  security.scm
